removed unnecessary compiler args